played with responsive layout issues on 'About Me' and 'Portfolio' pages; deleted card <section>s (all changes in this commit made during tutoring session with my TA Ryan Skog)

--- a/style.css
+++ b/style.css
@@ -5,10 +5,27 @@
     color: whitesmoke
 }
 
-.portfolioImages {
+.portfolioImages img {
     margin: 10px;
 }
 
 .floatleft {
     float: left;
+}
+
+.index-content img {
+    margin: 10px;
+}
+
+@media only screen and (max-width: 768px) {
+    .floatleft {
+        float: none;
+        margin: auto;
+    }
+    .index-content {
+        text-align: center;
+    }
+    .index-content p {
+        text-align: left;
+    }
 }
